--- a/src/components/HTMLButton.astro
+++ b/src/components/HTMLButton.astro
@@ -10,28 +10,37 @@ const { title,  url,   buttonText, addText } = Astro.props
    </li>
 
 <style>
-.button{
-  background-color: var( --color-secondary);
-  border: 1px solid var( --color-secondary);
-  color: white;
-  padding: 15px 15px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 12px;
-  margin-left:2em;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-}
-.button {
-  transition-duration: 0.4s;
+ .button {
+  background:#387796;
+  border-color:#387796
+            font-size:1em;
+            color: #fff;
+            border-radius: 7px;
+            box-shadow: 0 7px 0px var(--color-accent);
+            display: inline-block;
+            transition: all .2s;
+            position: relative;
+            padding: 20px 25px;
+            top: 10;
+            cursor: pointer;
+            margin:0 23px 10px 10px;
 }
 
+ .button:active {
+  top: 3px;
+            box-shadow: 0 3px 0px var(--color-accent);
+            transition: all .2s;
+        }
+
+/*
 .button:hover {
   background-color: var(--color-accent);
-  color: #666;
+  color: #fff;
   box-shadow: 0 6px 8px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 
 }
+*/
+
   li{
     font-size: .9em;
   
@@ -39,19 +48,25 @@ const { title,  url,   buttonText, addText } = Astro.props
 
 
 .flex-item {
-  transition:1.5ms;
 top:5;
 margin: 0 10px;
+margin-left: 30px;
 padding: 5px;
 display: flex;
 align-items: center;
 }
 
 .flex-item a:hover{
+color:var(--color-accent);
+}
+
+/*
+.flex-item a:hover{
  text-decoration: underline;
 color:var(--color-accent);
  transition: all .5s;
 }
+*/
 
 
 @media all and (max-width:30em){
