--- a/src/components/LaunchButton.astro
+++ b/src/components/LaunchButton.astro
@@ -17,7 +17,7 @@ const { title,  url,  buttonText, addText } = Astro.props
    
     li{
       display: flex;
-      justify-content: center;
+      justify-content: flex-start;
       justify-items: center;
    
     }
@@ -41,7 +41,7 @@ const { title,  url,  buttonText, addText } = Astro.props
             padding: 20px 25px;
             top: 10;
             cursor: pointer;
-            margin:0 20px;
+            margin:0 23px 10px 10px;
 }
 
  .btn-9:active {
@@ -49,8 +49,8 @@ const { title,  url,  buttonText, addText } = Astro.props
             box-shadow: 0 2px 0px #387796;
             transition: all .2s;
         }
-/* Buton 9 Bitti */
-    /*
+
+    
    
     @media all and (max-width:30em){
         a.{
@@ -61,7 +61,7 @@ const { title,  url,  buttonText, addText } = Astro.props
     
     }
     
-    */
+
   </style>
 
 
