--- a/src/components/Modules.astro
+++ b/src/components/Modules.astro
@@ -69,6 +69,7 @@ import { Icon } from 'astro-icon'
     <article class="main">
       <div class="flex-container">
       <p>The ARG is a routine using an advanced organizer to prompt student thinking about key topics before reading, to document related text evidence during reading, and to reconsider opinions of key topics after reading based on documented evidence. This course demonstrates how to plan and implement instruction of the Anticipation-Reaction Guides (ARGs) to support students’ reading comprehension. </p>
+      <LaunchButton />
           <ul >
           {ARGData.map(ARG => (
             <HTMLButton title={ARG.title} url={ARG.url} buttonText={ARG.buttonText}/>
@@ -113,6 +114,7 @@ import { Icon } from 'astro-icon'
         <article class="main">
           <div class='flex-container'>
           <p>The GtG strategy teaches students a systematic procedure for identifying the main idea in a text. This course will teach you how to plan and implement instruction of the Get the Gist (GtG) strategy. </p>
+          <LaunchButton />
           <h4>The GtG course has 2 sections: </h4>
     <ul >
       {GTGData.map(GTG => (
@@ -165,13 +167,14 @@ import { Icon } from 'astro-icon'
       <article class="main">
         <div class='flex-container'>
         <p>The Morphology course demonstrates how to deliver effective morphology instruction that fosters morphological knowledge and word consciousness through five critical components: </p>
-        <ol style='margin-left:3em;'>
+        <ol style='margin-bottom:1em; margin-left:1.8em;'>
           <li>Explicit instruction of roots, </li>
           <li>Generative morphology, </li>
           <li>Morphological problem solving, </li>
           <li>Use of contextual information, and </li>
           <li>Word etymology.  </li>
         </ol>
+        <LaunchButton />
         <h4>The Morphology course has 4 sections: </h4>
      
           <ul>
@@ -232,6 +235,7 @@ import { Icon } from 'astro-icon'
         <article class="main">
           <div class='flex-container'>
           <p>The Reciprocal Teaching (RT) course demonstrates how to support student reading comprehension through cooperative group discussion focused on four, high leverage reading comprehension strategies: Predicting, Questioning, Clarifying, and Summarizing (Palinscar & Brown, 1984). This course illustrates a 5-week sample schedule for building cooperative groups and folding in the four RT strategies one at a time. This course also provides teacher opportunity for practice, sample teacher scripts, teacher tips, and suggestions for student warm-up and group activities.  </p>
+          <LaunchButton />
           <h4>The RT Course includes 6 sections: </h4>
          
           <ul>
@@ -344,6 +348,9 @@ import { Icon } from 'astro-icon'
   <article class='main'>
       <div class='flex-container'>
         <p>This course will teach you how to use the Self-Generated Questions (SGQs) strategy as a tool to support adolescent reading comprehension. The SGQ strategy teaches students how to self-generate three levels of questions while reading in order to help build and monitor their comprehension of text.</p>
+      <ul>
+        <LaunchButton />
+      </ul>
         <h4>The SGQ Course contains 5 sections:</h4>
         <ul>
           {sgqData.map(SGQ => (
@@ -383,6 +390,7 @@ import { Icon } from 'astro-icon'
       <div class='flex-container'>
         <p>A Vocabulary Map is a graphic organizer used to preteach key vocabulary. This course will illustrate how to prepare Vocabulary Maps and how to deliver explicit vocabulary instruction using them.</p>
       <p>The Vocabulary Map course has 3 sections:</p>
+      <LaunchButton />
       <ul>
         {vocabData.map(vocab => (
           <HTMLButton title={vocab.title} url={vocab.url} buttonText={vocab.buttonText}/>
@@ -430,6 +438,7 @@ import { Icon } from 'astro-icon'
       <article class='main'>
         <div class='flex-container'>
           <p>WordBuilder Intervention is a free application in the <a href='https://apple.com/'>Apple App Store</a>, the <a href='https://play.google.com/store/apps/details?id=org.napacoe.wordbuilder'>Google Play Store</a> & <a href='http://bit.ly/wordbuilder_int'>The Amazon Store!</a> and a free web version on <a href='https://calireads.org/wordbuilder/'>CALI Reads Wordbuilder</a>. The WordBuilder Intervention course demonstrates how to effectively and systematically deliver teacher-led, small group instruction using this tool to teach struggling readers how to break down, build, and spell multisyllabic words.  </p>
+          <LaunchButton />
         <p>The WordBuilder Intervention course has 4 sections:</p>
        <ul>
         {wbData.map(wordbuilder => (
@@ -467,6 +476,7 @@ import { Icon } from 'astro-icon'
   width: 100%;
       padding: 0px;
       margin-top:-20px;
+   
       list-style: none;
       display: flex-end;
 /*
