button clean up

--- a/src/components/LaunchButton.astro
+++ b/src/components/LaunchButton.astro
@@ -6,9 +6,9 @@ const { title,  url,  buttonText, addText } = Astro.props
 
 
   <li>
-    <a href={url} >
+    <a href={url} title={}>
        <div class="btn-9">
-          Start The Module >>
+          Start The Course &gt;&gt;
         </div>
       </a>
   </li>
