--- a/src/components/Modules.astro
+++ b/src/components/Modules.astro
@@ -64,7 +64,7 @@ import { Icon } from 'astro-icon'
 <section class="ARGuides" id="ARGuides">
   <div class="module-wrapper">
     <header class="mod-header">
-      <h2>Anticipation Reaction Guides Modules</h2>
+      <h2>Anticipation Reaction Guides Course</h2>
     </header>
     <article class="main">
       <div class="flex-container">
@@ -109,7 +109,7 @@ import { Icon } from 'astro-icon'
   <section class="GTG" id="GTG">
     <div class="module-wrapper">
       <header class="mod-header">
-        <h2>Get The Gist Modules</h2>
+        <h2>Get The Gist Course</h2>
         </header>
         <article class="main">
           <div class='flex-container'>
@@ -162,7 +162,7 @@ import { Icon } from 'astro-icon'
   <section class="morphology" id="morphology">
     <div class="module-wrapper">
       <header class='mod-header'>
-        <h2>Morphology Modules</h2>
+        <h2>Morphology Course</h2>
       </header>
       <article class="main">
         <div class='flex-container'>
@@ -224,7 +224,7 @@ import { Icon } from 'astro-icon'
   <section class="ReciprocalTeaching" id="ReciprocalTeaching">
     <div class="module-wrapper">
       <header class='mod-header'>
-        <h2>Reciprocal Teaching Modules</h2>
+        <h2>Reciprocal Teaching Course</h2>
       </header>
       <aside class='aside aside-1'>
        <div class='imgHolder'> 
@@ -337,7 +337,7 @@ import { Icon } from 'astro-icon'
 <section class="SGQmodules" id="SGQmodules">
     <div class="module-wrapper">
       <header class='mod-header'>
-        <h2>Self-Generated Questions Modules</h2>
+        <h2>Self-Generated Questions Course</h2>
       </header>
 <aside class='aside aside-1'>
   <div class='imgHolder'> 
@@ -378,7 +378,7 @@ import { Icon } from 'astro-icon'
   <section class="vocabModules" id="vocabModules">
     <div class="module-wrapper">
       <header class='mod-header'>        
-        <h2>Vocabulary Maps Modules</h2>
+        <h2>Vocabulary Maps Course</h2>
       </header>
       <aside class='aside aside-1'>
       <div class='imgHolder'>
@@ -425,7 +425,7 @@ import { Icon } from 'astro-icon'
   
     <div class="module-wrapper">
       <header class='mod-header'>
-        <h2>Wordbuilder Modules</h2>
+        <h2>Wordbuilder Course</h2>
       </header>
       
       <aside class='aside aside-1'>
@@ -501,13 +501,7 @@ import { Icon } from 'astro-icon'
   display: flex;
   flex-wrap: nowrap;
   column-gap: 20px;
-  justify-content:flex-end;
-}
-
-.media-button-container .end{
-  display: flex;
-  wrap:nowrap;
-  justify-content: flex-end;
+  justify-content:center;
 }
 
 .moduleButton {
