--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Features from '../components/Features.astro';
 
 import Footer from '../components/Footer.astro';
 
+import { Icon } from 'astro-icon';
 ---
 
 
@@ -29,3 +30,8 @@ import Footer from '../components/Footer.astro';
   </section>
 
 </Layout>
+<style>
+  [astro-icon="fluent-mdl2:learning-tools"]{
+    width:300px;
+  }
+</style>
