numaral format change

--- a/src/components/HTMLButton.astro
+++ b/src/components/HTMLButton.astro
@@ -12,7 +12,7 @@ const { title,  url,   buttonText, addText } = Astro.props
 <style>
  .button {
   background:#387796;
-  border-color:#387796
+  border:0;
             font-size:1em;
             color: #fff;
             border-radius: 7px;
