added back-top-top feature

--- a/src/layouts/ModuleLayout.astro
+++ b/src/layouts/ModuleLayout.astro
@@ -2,10 +2,12 @@
 const {title} = Astro.props;
 
 import Header from '../components/Header.astro';
-
+import BackToTop from '../components/BackToTop.astro';
 import Footer from '../components/Footer.astro';
 
 import '../styles/global.css';
+
+
 
 ---
 <!DOCTYPE html>
@@ -20,10 +22,14 @@ import '../styles/global.css';
     <title>{title}</title>
 </head>
 <body>
-    <a href='#page-content' class='skipLink'>skip to content</a>
-    <Header />
-    <slot />
-    <Footer />
 
+    
+    <Header />
+    <a href="#" class="back-to-top"></a>
+    <slot />
+   <BackToTop />
+    <Footer />
+   
 </body>
 </html>
+
