--- a/src/pages/modules.astro
+++ b/src/pages/modules.astro
@@ -6,9 +6,7 @@ import Modules from '../components/Modules.astro';
 import Showcase from '../components/Showcase.astro';
 import ModuleNav from '../components/ModuleNav.astro';
 
-import Advert from '../images/SVG/free-literacy.svg';
-import { Icon } from 'astro-icon';
-import litImage from '../images/free-logo.png';
+
 ---
 <ModuleLayout title="Literacy Courses">
     <Showcase showExtra={false} />
@@ -36,7 +34,7 @@ import litImage from '../images/free-logo.png';
 
     .intro-block{
         display:flex;
-        
+        margin-top: -2em;
         justify-content: space-around;
     }
     .intro{
