--- a/src/components/BackToTop.astro
+++ b/src/components/BackToTop.astro
@@ -1,5 +1,9 @@
 
-<a href="#" class="back-to-top" id="scrollBtn"></a>
+<div>
+  <a href="#" class="back-to-top" id="scrollBtn" title='back to top'></a>
+ 
+</div>
+
 <style>
     .back-to-top {
        
