--- a/src/components/Modules.astro
+++ b/src/components/Modules.astro
@@ -484,7 +484,7 @@ import { Icon } from 'astro-icon'
   width: 100%;
       padding: 0px;
       margin-top:-20px;
-   
+      font-size: 2.1ch;   
       list-style: none;
       display: flex-end;
 /*
