--- a/src/pages/modules.astro
+++ b/src/pages/modules.astro
@@ -15,13 +15,15 @@ import ModuleNav from '../components/ModuleNav.astro';
     <section class="page-content" id="page-content">
         <div class='intro-block'>
             <div class='intro-text'>
-                <p class='intro'>CALI Reads offers 7 free e-Learning Courses on Adolescent Literacy Instruction. These courses can be used for professional learning by educators and administrators on how to provide quality literacy instruction proven to enhance content area learning (ELA, social studies, science, math, etc.).  </p>
-            <p class='intro'>
-            Each e-Learning course takes approximately 2-3 hours to complete. You can launch the full course below or complete it section by section.
-            </p>
-            <p class="intro">
-            You can make a difference for your students! They deserve your best. Get started today! 
-        </p>
+                <h1>You can make a difference for your students!  </h1>
+                <h2>CALI Reads offers 7 free e-Learning Courses on Adolescent Literacy Instruction </h2>
+                <div class='sub-intro'>
+                <p>These courses can be used for professional learning by educators and administrators on how to provide quality literacy instruction proven to enhance content area learning (ELA, social studies, science, math, etc.). </p>
+                
+                        <p >Each e-Learning course takes approximately 2-3 hours to complete. You can launch the full course below or complete it section by section.</p>
+                        
+                        <p>Your students deserve your best. Get started today! </p>
+                </div>
             </div>
         </div>
    
@@ -35,10 +37,23 @@ import ModuleNav from '../components/ModuleNav.astro';
     .intro-block{
         display:flex;
         margin-top: -2em;
-        justify-content: space-around;
+        justify-content: left;
     }
     .intro{
         font-size: larger;
+        width: 100%;
+        text-align:left;
+        font-size: 4ch;
+    }
+
+    .intro-text h2{
+        text-align: left;
+    }
+
+    .sub-intro{
+        text-align:left;
+        max-width: 80%;
+        font-size: 2ch;
     }
 
     [astro-icon='twemoji:books']:before{
