--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,6 +37,7 @@
 
 }
 body {
+  font-family: Fira Sans;
     font-family: 'Poppins','Roboto','Helvetica', 'Arial', sans-serif;
     font-size: 1rem;
     line-height: 1.5;
