added digiCoach page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,6 +24,7 @@
         <li class="nav-item"><a class="nav-link" href='/index.html#features'>Literacy Strategies</a></li>
         <li class="nav-item"><a class="nav-link" href="https://calireads.org/wordbuilder/" target="_blank">Wordbuilder Intervention</a></li>
         <li class="nav-item"><a class="nav-link" href="/modules">E-Learning Modules</a></li>
+        <li class="nav-item"><a class="nav-link" href='/digiCoach/'>digiCoach</a></li>
         <li class="nav-item"><a class="nav-link" href="https://vimeo.com/showcase/calireadswebinars" target="_blank">Webinars</a></li>
         <li class="nav-item"><a class="nav-link" href="https://vimeo.com/showcase/calireadsdemonstration" target="_blank">Demonstration Videos</a></li>
       </ul>
