--- a/src/components/HTMLButton.astro
+++ b/src/components/HTMLButton.astro
@@ -32,14 +32,13 @@ const { title,  url,   buttonText, addText } = Astro.props
             transition: all .2s;
         }
 
-/*
+
 .button:hover {
-  background-color: var(--color-accent);
-  color: #fff;
+
+  color:var(--color-accent);
   box-shadow: 0 6px 8px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 
 }
-*/
 
   li{
     font-size: .9em;
